[package]
name = "fight_arena"
version = "0.4.1"
authors = ["Olf EPAIN <wabtey@disroot.org>", "Morgan Van Amerongen <vanamerongen.morgan@gmail.com>"]
repository = "https://github.com/Fabinistere/fight_arena"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# default-features = false, features = ["bevy_asset", "bevy_scene", "bevy_winit", "render", "x11", "png", "wayland", "dynamic"]
bevy = { version = "0.10",  features = ["dynamic_linking"] }
bevy_ecs = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = "0.10"
bevy_ecs = "0.10"
wasm-bindgen = "0.2"
# a panic hook that will cause the messages to appear in the browser console
console_error_panic_hook = "0.1"

[dependencies]

# ----------- Common ----------
# bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio.git" }
bevy_tweening = "0.7"
bevy_reflect = "0.10"
image = "0.23"

rand = "0.8.5"

# ----- Hitbox - Velocity -----
bevy_rapier2d = { version = "0.21", features = ["simd-stable", "debug-render-2d"] }


density-mesh-core = "1.5"
density-mesh-image = "1.5"

# ----------- Debug -----------
bevy-inspector-egui = "0.18"
log = "0.4.17"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# for mac...
# incremental = false

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# for mac...
# incremental = false
